# odoo

./: requirements.txt
addons/account/views/: account_menuitem.xml  product_view.xml
addons/hr_timesheet/views/: hr_timesheet_views.xml
addons/project/models/: project_project.py  project_update.py
addons/project/report/: project_task_burndown_chart_report_views.xml
addons/project/views/: project_project_views.xml  project_sharing_project_task_views.xml  project_task_views.xml  project_update_views.xml  rating_rating_views.xml
custom_addons/account-analytic/: README.md
custom_addons/account-analytic/setup/_metapackage/: pyproject.toml
custom_addons/account-closing/: README.md
custom_addons/account-financial-reporting/: README.md
custom_addons/account-financial-reporting/mis_builder_cash_flow/: README.rst  test-requirements.txt
custom_addons/account-financial-reporting/mis_builder_cash_flow/i18n/: es.po  it.po  mis_builder_cash_flow.pot
custom_addons/account-financial-reporting/mis_builder_cash_flow/models/: mis_cash_flow_forecast_line.py
custom_addons/account-financial-reporting/mis_builder_cash_flow/report/: mis_cash_flow.py
custom_addons/account-financial-reporting/mis_builder_cash_flow/static/description/: index.html
custom_addons/account-financial-reporting/mis_builder_cash_flow/tests/: test_cash_flow.py
custom_addons/account-financial-reporting/mis_builder_cash_flow/views/: mis_cash_flow_forecast_line_views.xml
custom_addons/account-financial-reporting/mis_template_financial_report/: README.rst
custom_addons/account-financial-reporting/mis_template_financial_report/static/description/: index.html
custom_addons/account-financial-tools/: README.md
custom_addons/account-financial-tools/.github/workflows/: test.yml
custom_addons/account-financial-tools/setup/_metapackage/: pyproject.toml
custom_addons/account-fiscal-rule/: README.md
custom_addons/account-fiscal-rule/setup/_metapackage/: pyproject.toml
custom_addons/account-invoice-reporting/: README.md
custom_addons/account-invoice-reporting/setup/_metapackage/: pyproject.toml
custom_addons/account-invoicing/: README.md
custom_addons/account-invoicing/setup/_metapackage/: pyproject.toml
custom_addons/account-reconcile/: README.md
custom_addons/agreement/: README.md
custom_addons/base_accounting_kit/: requirements.txt
custom_addons/dms/: README.md
custom_addons/dms/setup/_metapackage/: pyproject.toml
custom_addons/hr/: README.md
custom_addons/hr-expense/: README.md
custom_addons/hr-expense/setup/_metapackage/: pyproject.toml
custom_addons/hr-holidays/: README.md
custom_addons/hr-holidays/setup/_metapackage/: pyproject.toml
custom_addons/hr/setup/_metapackage/: pyproject.toml
custom_addons/l10n-usa/: README.md
custom_addons/l10n-usa/setup/_metapackage/: pyproject.toml
custom_addons/margin-analysis/: README.md
custom_addons/margin-analysis/setup/_metapackage/: pyproject.toml
custom_addons/mis-builder/: README.md
custom_addons/mis-builder-18.0/: eslint.config.cjs
custom_addons/mis-builder-18.0/setup/_metapackage/: pyproject.toml
custom_addons/mis-builder/mis_builder/models/: aep.py  kpimatrix.py
custom_addons/payroll/: README.md
custom_addons/reporting-engine/: README.md
custom_addons/reporting-engine/setup/_metapackage/: pyproject.toml
custom_addons/server-brand/: README.md
custom_addons/server-tools/: README.md  requirements.txt
custom_addons/server-tools/setup/_metapackage/: pyproject.toml
