[project]
name = "odoo-addons-oca-account-fiscal-rule"
version = "18.0.20250328.0"
dependencies = [
    "odoo-addon-account_avatax_exemption==18.0.*",
    "odoo-addon-account_avatax_exemption_base==18.0.*",
    "odoo-addon-account_avatax_oca==18.0.*",
    "odoo-addon-account_avatax_oca_log==18.0.*",
    "odoo-addon-account_avatax_sale_oca==18.0.*",
    "odoo-addon-account_avatax_website_sale==18.0.*",
    "odoo-addon-account_fiscal_position_partner_type==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
