[project]
name = "odoo-addons-oca-l10n-usa"
version = "18.0.20250423.0"
dependencies = [
    "odoo-addon-account_banking_ach_base==18.0.*",
    "odoo-addon-account_banking_ach_credit_transfer==18.0.*",
    "odoo-addon-l10n_us_account_routing==18.0.*",
    "odoo-addon-l10n_us_partner_legal_number==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
