[project]
name = "odoo-addons-oca-margin-analysis"
version = "18.0.20250422.0"
dependencies = [
    "odoo-addon-account_invoice_margin==18.0.*",
    "odoo-addon-account_invoice_margin_sale==18.0.*",
    "odoo-addon-sale_margin_delivered==18.0.*",
    "odoo-addon-sale_margin_security==18.0.*",
    "odoo-addon-sale_margin_sync==18.0.*",
    "odoo-addon-sale_report_margin==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
